--- a/src/styles/pages/homepage/hero.css
+++ b/src/styles/pages/homepage/hero.css
@@ -64,3 +64,13 @@
     min-height: 200vh;
   } */
 }
+
+@media screen and (max-width: 767px) and (orientation: portrait) {
+  @supports (-webkit-touch-callout: none) {
+    /* Styles spécifiques à Safari sur iOS en mode portrait */
+    .h1__iphone {
+      /* Exemple de style pour Safari en portrait */
+      -webkit-text-size-adjust: 90%; /* Préfixe spécifique à Safari */
+    }
+  }
+}
